// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiRadio is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiRadio testClass1 testClass2 emotion-euiRadio-euiTestCss"
  data-test-subj="test subject string"
>
  <input
    class="euiRadio__input emotion-euiRadio__input"
    id="id"
    type="radio"
    value=""
  />
</div>
`;

exports[`EuiRadio props checked is rendered 1`] = `
<div
  class="euiRadio emotion-euiRadio"
>
  <input
    checked=""
    class="euiRadio__input emotion-euiRadio__input"
    id="id"
    type="radio"
    value=""
  />
</div>
`;

exports[`EuiRadio props disabled is rendered 1`] = `
<div
  class="euiRadio emotion-euiRadio"
>
  <input
    class="euiRadio__input emotion-euiRadio__input"
    disabled=""
    id="id"
    type="radio"
    value=""
  />
</div>
`;

exports[`EuiRadio props label is rendered 1`] = `
<div
  class="euiRadio emotion-euiRadio"
>
  <input
    class="euiRadio__input emotion-euiRadio__input"
    id="id"
    type="radio"
    value=""
  />
  <label
    class="euiRadio__label emotion-euiRadio__label"
    for="id"
  >
    <span>
      Label
    </span>
  </label>
</div>
`;

exports[`EuiRadio props labelProps is rendered 1`] = `
<div
  class="euiRadio emotion-euiRadio"
>
  <input
    class="euiRadio__input emotion-euiRadio__input"
    id="id"
    type="radio"
    value=""
  />
  <label
    aria-label="aria-label"
    class="euiRadio__label testClass1 testClass2 emotion-euiRadio__label-euiTestCss"
    data-test-subj="test subject string"
    for="id"
  >
    Label
  </label>
</div>
`;

exports[`EuiRadio props value is rendered 1`] = `
<div
  class="euiRadio emotion-euiRadio"
>
  <input
    class="euiRadio__input emotion-euiRadio__input"
    id="id"
    type="radio"
    value="bobbins"
  />
</div>
`;
